--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<ul class="navbar">
 			<li><a href="#home">Home</a></li>
-			<li><a href="#about">About Me</a></li>
+			<li><a href="/pages/about.html">About Me</a></li>
 			<li><a href="#project">Projects</a></li>
 			<li><a href="#skills">Skills</a></li>
 			<li><a href="#Contacts">Contact Me</a></li>
@@ -74,7 +74,7 @@
 
 			<div class="box">
 				<div class="thum">
-					<img src="/img/stream.jpg">
+					<img src="../img/stream.jpg">
 					<h3>$499</h3>
 				</div>
 
@@ -95,7 +95,7 @@
 
 			<div class="box">
 				<div class="thum">
-					<img src="/img/webs.jpg">
+					<img src="../img/webs.jpg">
 					<h3>$499</h3>
 				</div>
 
@@ -125,22 +125,22 @@
 
 		<div class="destination-content">
 			<div class="col-content">
-				<img src="/img/webdesign.jpg">
+				<img src="../img/webdesign.jpg">
 				<h5>Web Design</h5>
 			</div>
 
 			<div class="col-content">
-				<img src="/img/app.png">
+				<img src="../img/app.png">
 				<h5>App Design</h5>
 			</div>
 
 			<div class="col-content">
-				<img src="/img/ui.png">
+				<img src="../img/ui.png">
 				<h5>UI/UX Design</h5>
 			</div>
 
 			<div class="col-content">
-				<img src="/img/1_jMDG7pTIaVeP5bQnE1RuXg.png">
+				<img src="../img/1_jMDG7pTIaVeP5bQnE1RuXg.png">
 				<h5>Game Design</h5>
 			</div>
 
