--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 		<div class="bx bx-menu" id="menu-icon"></div>
 
 		<ul class="navbar">
-			<li><a href="#home">Home</a></li>
+			<li><a href="/index.html">Home</a></li>
 			<li><a href="/pages/about.html">About Me</a></li>
-			<li><a href="#project">Projects</a></li>
-			<li><a href="#skills">Skills</a></li>
-			<li><a href="#Contacts">Contact Me</a></li>
+			<li><a href="/pages/project.html">Projects</a></li>
+			<li><a href="/pages/skills.html">Skills</a></li>
+			<li><a href="/pages/contacts.html">Contact Me</a></li>
 		</ul>
 	</header>
 
