--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Rex Website</title>
+	<link rel="icon" type="image/x-icon" href="/img/favicon.ico.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<link rel="stylesheet"
